--- a/RegHook/RegHook.csproj
+++ b/RegHook/RegHook.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\EasyHook.2.7.6578.1\lib\net40\EasyHook.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Remoting" />
@@ -47,6 +51,7 @@
   <ItemGroup>
     <Compile Include="RegHookServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VRegKey.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="EasyHook32.dll">
