--- a/RegHook/RegHook.csproj
+++ b/RegHook/RegHook.csproj
@@ -52,6 +52,7 @@
     <Compile Include="RegHookServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VRegKey.cs" />
+    <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
