--- a/RegHook/RegHook.csproj
+++ b/RegHook/RegHook.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="RegHookServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VRegKey.cs" />
+    <Compile Include="VReg.cs" />
     <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
