--- a/FSHook/FSHook.csproj
+++ b/FSHook/FSHook.csproj
@@ -25,6 +25,8 @@
     <DefineConstants Condition="'$(Configuration)' == 'Debug'">DEBUG;$(DefineConstants)</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>FSHook.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EasyHook, Version=2.7.6684.0, Culture=neutral, PublicKeyToken=4b580fca19d0b0c5, processorArchitecture=MSIL">
@@ -52,6 +54,7 @@
     <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="FSHook.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
