--- a/WFRR/packages.config
+++ b/WFRR/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyHook" version="2.7.6684" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net452" />
 </packages>
