align class name

--- a/WFRR/WFRR.csproj
+++ b/WFRR/WFRR.csproj
@@ -33,7 +33,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="WFRR.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
