--- a/WFRRTest/WFRRTest.csproj
+++ b/WFRRTest/WFRRTest.csproj
@@ -20,7 +20,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="WFRRTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
