--- a/WFRR/App.config
+++ b/WFRR/App.config
@@ -21,9 +21,26 @@
                 <conversionPattern value="%date %-5level: %message%newline" />
             </layout>
         </appender>
+        <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+            <mapping>
+                <level value="ERROR" />
+                <foreColor value="Red" />
+            </mapping>
+            <mapping>
+                <level value="DEBUG" />
+                <foreColor value="Green" />
+            </mapping>
+            <mapping>
+                <level value="INFO" />
+                <foreColor value="White" />
+            </mapping>
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date %-5level: %message%newline" />
+            </layout>
+        </appender>
         <root>
             <level value="ALL" />
-            <appender-ref ref="ConsoleAppender" />
+            <appender-ref ref="ColoredConsoleAppender" />
             <appender-ref ref="LogFileAppender" />
         </root>
     </log4net>
