--- a/WFRR/WFRR.csproj
+++ b/WFRR/WFRR.csproj
@@ -19,10 +19,6 @@
       <HintPath>..\3rdparty\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NDesk.Options, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\3rdparty\NDesk.Options.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Remoting" />
@@ -35,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="WFRR.cs" />
+    <Compile Include="Options.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
